# IRTK

./: .gitmodules  .travis.yml  CMakeLists.txt  COPYRIGHT  CTestConfig.cmake  DartConfig.cmake  HEADER.tmpl  INSTALL.markdown  LICENSE  NOTICE  README  README.md  condor_compile.sh  index.html  irtkheader.svnprops  params.json
InstallerScripts/: SoftwareLicense.txt  irtkInstaller.nsi  irtkInstaller.sh
applications/: AnisoDiff.cc  CMakeLists.txt  autocontrast.cc  average.cc  binarize.cc  bisect_dof.cc  blur.cc  closing.cc  combineLabels.cc  combineimages.cc  convert.cc  dicemetric.cc  dicom2image.cc  dilation.cc  dmap.cc  edgedetect.cc  erosion.cc  fiximage.cc  flip.cc  giplmagic.cc  headertool.cc  histogram.cc  info.cc  labelStats.cc  lcc.cc  lcc_iterative.cc  makesequence.cc  makevolume.cc  mcubes.cc  median.cc  modefilter.cc  msample.cc  noise.cc  opening.cc  overlap.cc  padding.cc  ply2vtk.cc  polar2cartesian.cc  raw2image.cc  reflect.cc  (+12 more)
applications/include/: combineLabels_core.h  makevolume_core.h
applications/src/: combineLabels_core.cc  makevolume_core.cc
common++/src/: CMakeLists.txt  basename.cc  dirname.cc  irtkCifstream.cc  irtkCofstream.cc  irtkCommon.cc  irtkException.cc  irtkObject.cc  irtkParallel.cc  read.cc  swap.cc  uncompress.cc  weightedmedian.cc
config/: FindFLTK.cmake  (+7 more)
cudaCommon++/: CMakeLists.txt
cudaCommon++/cmake/: CheckCxxFeatures.cmake  c++-test-override-attr-none-fail.cpp  c++-test-override-attr-none.cpp  c++11-test-auto-N2546.cpp  c++11-test-initializer-lists-N2672.cpp  c++11-test-lambda-N2927.cpp  c++11-test-nullptr-N2431.cpp  c++11-test-override-N3206-fail.cpp  c++11-test-override-N3206.cpp  c++11-test-unique_ptr-none.cpp  c++11-test-variadic-templates-N2242.cpp
cudaCommon++/include/: irtkCUAbstractFilterBase.h  irtkCUGenericImage.h  irtkCUImage.h  irtkCUMaskFilter.h  irtkCUSharedLibMacros.h  nppExceptions.h  nullptr.h
cudaCommon++/include/memory/: BaseArray.h  BaseMatrix.h  CudaArray.h  CudaMatrix.h  DeviceAccessibleVariable.h  DeviceArray.h  DeviceMatrix.h  HostArray.h  HostMatrix.h
cudaCommon++/include/reduction/: CudaDefinitions.h  CudaStreams.h  SumWarp.h  Utilities.h  reduction.h
cudaCommon++/src/IO/: irtkCUGenericImage.cpp  irtkCUImage_kernels.cu  irtkCUImage_kernels.cuh
cudaCommon++/src/filters/: irtkCUMaskFilter.cpp
cudaCommon++/src/reduction/: MaxKernel.cu  MinKernel.cu  SumKernel.cu  reduction.cpp
cudaCommon++/tests/: irtkCUImageTest.cpp  mask.hdr
geometry++/src/: CMakeLists.txt  irtkComplexFunction.cc  irtkMatrix.cc  irtkNeighbourhoodOffsets.cc  irtkPoint.cc  irtkPointSet.cc  irtkQuaternion.cc  irtkScalarFunction.cc  irtkScalarGaussian.cc  irtkScalarGaussianDx.cc  irtkScalarGaussianDxDx.cc  irtkScalarGaussianDxDy.cc  irtkScalarGaussianDxDz.cc  irtkScalarGaussianDy.cc  irtkScalarGaussianDyDy.cc  irtkScalarGaussianDyDz.cc  irtkScalarGaussianDz.cc  irtkScalarGaussianDzDz.cc  irtkVTKFunctions.cc  irtkVector.cc  irtkVector3D.cc
image++/src/: CMakeLists.txt  irtkAnisoDiffusion.cc  irtkBSplineInterpolateImageFunction.cc  irtkBSplineInterpolateImageFunction2D.cc  irtkBaseImage.cc  irtkCSplineInterpolateImageFunction.cc  irtkCSplineInterpolateImageFunction2D.cc  irtkConvolution.cc  irtkConvolutionWithGaussianDerivative.cc  irtkConvolutionWithGaussianDerivative2.cc  irtkConvolutionWithPadding_1D.cc  irtkConvolutionWithPadding_2D.cc  irtkConvolutionWithPadding_3D.cc  irtkConvolution_1D.cc  irtkConvolution_2D.cc  irtkConvolution_3D.cc  irtkDensity.cc  irtkDilation.cc  irtkErosion.cc  irtkFileANALYZEToImage.cc  irtkFileGIPLToImage.cc  irtkFileNIFTIToImage.cc  irtkFileOpenCVToImage.cc  irtkFilePGMToImage.cc  irtkFileToImage.cc  irtkFileVTKToImage.cc  irtkGaussianBlurring.cc  irtkGaussianBlurring2D.cc  irtkGaussianBlurring4D.cc  irtkGaussianBlurringWithPadding.cc  irtkGaussianBlurringWithPadding2D.cc  irtkGaussianInterpolateImageFunction.cc  irtkGaussianInterpolateImageFunction2D.cc  irtkGaussianNoise.cc  irtkGaussianNoiseWithPadding.cc  irtkGenericImage.cc  irtkGradientImage.cc  irtkGradientImageFilter.cc  irtkGradientImageX.cc  irtkGradientImageY.cc  (+42 more)
mcn06/config/: configure  configure.in  configure.scan  mkinstalldirs  project.tmpl
test/: CMakeLists.txt
test/applications/: combineLabels_test.cc  makevolume_test.cc
test/common++/: weightedmedian_test.cc
test/geometry++/: irtkAffineTransform_test.cc  irtkMatrix_test.cc  irtkPointSet_test.cc
test/image++/: irtkGaussianNoise_test.cc
wrapping/cython/: CMakeLists.txt  Makefile  README  generate_templates.py  setup.py
wrapping/cython/doc/: Makefile  make.bat
wrapping/cython/doc/notebook/: IRTK_from_Python.ipynb
wrapping/cython/doc/source/: conf.py  index.rst  why.rst
wrapping/cython/ext/: Makefile  _template.pyx  setup.py
wrapping/cython/ext/CLAHE/: _clahe.pyx  clahe.c  clahe.h
wrapping/cython/ext/SLIC/: SLIC.cc  _slic.pyx
wrapping/cython/ext/crf/: _crf.cc  _crf.h  crf.pyx
wrapping/cython/ext/crf/src/: Makefile  pycrf.cpp  pycrf.pyx  setup.py  test_cube.py  test_lena.py
wrapping/cython/ext/graphcut/: _graphcut.cc  _graphcut.h  graphcut.pyx
wrapping/cython/ext/graphcut/maxflow-v3.02.src/: CHANGES.TXT  README.TXT
wrapping/cython/ext/patches/: _patches.pyx  patches.cc  patches.h
wrapping/cython/include/: crf.h  drawing.h  irtk2cython.h  reconstruction.h  registration.h  voxellise.h
wrapping/cython/include/ext/: SLIC.h
wrapping/cython/irtk/: Image.py  Transformation.py  Utils.py  __init__.py  cmd.py  image.py  morphology.py  opencv_functions.py  reconstruction.py  registration.py  utils.py  vtk2irtk.py
wrapping/cython/irtk/ext/: FitEllipsoid.py  Show.py  Show3D.py  chanvese.py  clahe.py  dicomReader.py  featExtract.ubu  opencv.py  patches.py  sift3d.py  slic.py  template.py  vtkTools.py
wrapping/cython/scripts/: decrop.py  fetalMask.sh  fetalMask_detection.py  fetalMask_segmentation.py  find_template.py  learn.sh  learn_mser.py
wrapping/cython/scripts/lib/: BundledSIFT.py  ransac.py
wrapping/cython/src/: _irtk.pyx  crf.cc  drawing.cc  irtk2cython.cc  reconstruction.cc  registration.cc  voxellise.cc
wrapping/cython/src/ext/: _slic.pyx
(+660 files in other folders)
