LINK_LIBRARIES(contrib++ image++ geometry++ common++) 
IF (USE_VXL)
  LINK_LIBRARIES(irtkvnl irtkvcl irtkvnl_algo irtknetlib)
ELSE (USE_VXL)
  LINK_LIBRARIES(recipes)
ENDIF (USE_VXL)

# Convenience macros
MACRO(ADD_IRTK_EXECUTABLE name)
  ADD_EXECUTABLE(${name} ${name}.cc ${ARGN})
  INSTALL_TARGETS(/bin ${name})
ENDMACRO(ADD_IRTK_EXECUTABLE name)

MACRO(ADD_CONDOR_EXECUTABLE name)
  ADD_EXECUTABLE(${name}.condor ${name}.cc ${ARGN})
  INSTALL_TARGETS(/bin ${name}.condor)
ENDMACRO(ADD_CONDOR_EXECUTABLE name)


IF (BUILD_CONDOR_EXE)

  #  SET (CMAKE_CXX_COMPILER "condor_compile ${CMAKE_CXX_COMPILER}")
  # This is a hack since the line above doesn't work: this local 
  # scripts executes condor_compile with the option "c++". That means,
  # the variable CMAKE_CXX_COMPILER defined in ccmake is not taken 
  # into account!
  SET (CMAKE_CXX_COMPILER "${IRTK_SOURCE_DIR}/condor_compile.sh")

  ADD_CONDOR_EXECUTABLE(convert)
  ADD_CONDOR_EXECUTABLE(dilation)
  ADD_CONDOR_EXECUTABLE(erosion)
  ADD_CONDOR_EXECUTABLE(info)
  ADD_CONDOR_EXECUTABLE(noise)
  ADD_CONDOR_EXECUTABLE(padding)
  ADD_CONDOR_EXECUTABLE(region)

ELSEIF(BUILD_MPI_EXE)

ELSE ()

  ADD_IRTK_EXECUTABLE(average)
  ADD_IRTK_EXECUTABLE(autocontrast)
  ADD_IRTK_EXECUTABLE(combineLabels)
  ADD_IRTK_EXECUTABLE(convert)
  ADD_IRTK_EXECUTABLE(dilation)
  ADD_IRTK_EXECUTABLE(erosion)
  ADD_IRTK_EXECUTABLE(fiximage)
  ADD_IRTK_EXECUTABLE(info)
  ADD_IRTK_EXECUTABLE(noise)
  ADD_IRTK_EXECUTABLE(padding)
  ADD_IRTK_EXECUTABLE(region)
  ADD_IRTK_EXECUTABLE(binarize)
  ADD_IRTK_EXECUTABLE(blur)
  ADD_IRTK_EXECUTABLE(closing)
  ADD_IRTK_EXECUTABLE(dicom2image)
  ADD_IRTK_EXECUTABLE(dicemetric)
  ADD_IRTK_EXECUTABLE(dmap)
  ADD_IRTK_EXECUTABLE(edgedetect)
  ADD_IRTK_EXECUTABLE(flip)
  ADD_IRTK_EXECUTABLE(giplmagic)
  ADD_IRTK_EXECUTABLE(labelStats)
  ADD_IRTK_EXECUTABLE(lcc)
  ADD_IRTK_EXECUTABLE(lcc_iterative )
  ADD_IRTK_EXECUTABLE(makevolume)
  ADD_IRTK_EXECUTABLE(makesequence)
  ADD_IRTK_EXECUTABLE(modefilter)
  ADD_IRTK_EXECUTABLE(combineimages)
  ADD_IRTK_EXECUTABLE(mcubes)
  ADD_IRTK_EXECUTABLE(msample)
  ADD_IRTK_EXECUTABLE(opening)
  ADD_IRTK_EXECUTABLE(polar2cartesian)
  ADD_IRTK_EXECUTABLE(overlap)
  ADD_IRTK_EXECUTABLE(raw2image)
  ADD_IRTK_EXECUTABLE(reflect)
  ADD_IRTK_EXECUTABLE(resample)
  ADD_IRTK_EXECUTABLE(rescale)
  ADD_IRTK_EXECUTABLE(rescale_real)
  ADD_IRTK_EXECUTABLE(temporalalign)
  ADD_IRTK_EXECUTABLE(threshold)
  ADD_IRTK_EXECUTABLE(voxelsize)
  ADD_IRTK_EXECUTABLE(vtk2txt)
  ADD_IRTK_EXECUTABLE(vtk2ply)
  ADD_IRTK_EXECUTABLE(ply2vtk)
  ADD_IRTK_EXECUTABLE(histogram)
  ADD_IRTK_EXECUTABLE(sbig)
  ADD_IRTK_EXECUTABLE(splitvolume)
  ADD_IRTK_EXECUTABLE(AnisoDiff)
    
ENDIF ()
