SET(IMAGE_INCLUDES
../include/irtkANALYZE.h
../include/irtkBaseImage.h
../include/irtkBSplineInterpolateImageFunction2D.h
../include/irtkBSplineInterpolateImageFunction.h
../include/irtkConvolution_1D.h
../include/irtkConvolution_2D.h
../include/irtkConvolution_3D.h
../include/irtkConvolution.h
../include/irtkConvolutionWithPadding_1D.h
../include/irtkConvolutionWithPadding_2D.h
../include/irtkConvolutionWithPadding_3D.h
../include/irtkCSplineInterpolateImageFunction2D.h
../include/irtkCSplineInterpolateImageFunction.h
../include/irtkDilation.h
../include/irtkErosion.h
../include/irtkFileANALYZEToImage.h
../include/irtkFileGIPLToImage.h
../include/irtkFileNIFTIToImage.h
../include/irtkFilePGMToImage.h
../include/irtkFileToImage.h
../include/irtkFileVTKToImage.h
../include/irtkGaussianBlurring.h
../include/irtkGaussianBlurring4D.h
../include/irtkGaussianBlurringWithPadding.h
../include/irtkGaussianInterpolateImageFunction.h
../include/irtkGaussianInterpolateImageFunction2D.h
../include/irtkGaussianNoise.h
../include/irtkGaussianNoiseWithPadding.h
../include/irtkGenericImage.h
../include/irtkGIPL.h
../include/irtkGradientImage.h
../include/irtkGradientImageX.h
../include/irtkGradientImageY.h
../include/irtkGradientImageZ.h
../include/irtkHistogram_1D.h
../include/irtkHistogram_2D.h
../include/irtkHistogram.h
../include/irtkDensity.h
../include/irtkImageFunction.h
../include/irtkImage.h
../include/irtkImageAttributes.h
../include/irtkImageToFileANALYZE.h
../include/irtkImageToFileGIPL.h
../include/irtkImageToFile.h
../include/irtkImageToFilePGM.h
../include/irtkImageToFilePNG.h
../include/irtkImageToFileVTK.h
../include/irtkImageToFileNIFTI.h
../include/irtkImageToImage.h
../include/irtkInterpolateImageFunction.h
../include/irtkLargestConnectedComponent.h
../include/irtkLargestConnectedComponentIterative.h
../include/irtkLinearInterpolateImageFunction2D.h
../include/irtkLinearInterpolateImageFunction.h
../include/irtkNearestNeighborInterpolateImageFunction2D.h
../include/irtkNearestNeighborInterpolateImageFunction.h
../include/irtkNIFTI.h
../include/irtkNoise.h
../include/irtkPointToImage.h
../include/irtkResampling.h
../include/irtkResamplingWithPadding.h
../include/irtkRicianNoise.h
../include/irtkRicianNoiseWithPadding.h
../include/irtkScalarFunctionToImage.h
../include/irtkSincInterpolateImageFunction2D.h
../include/irtkSincInterpolateImageFunction.h
../include/irtkTemplate.h
../include/irtkUniformNoise.h
../include/irtkUniformNoiseWithPadding.h
../include/irtkVoxel.h
../include/irtkVTK.h
../include/irtkAnisoDiffusion.h)

SET(IMAGE_SRCS 
irtkBSplineInterpolateImageFunction.cc
irtkBSplineInterpolateImageFunction2D.cc
irtkBaseImage.cc
irtkCSplineInterpolateImageFunction.cc
irtkCSplineInterpolateImageFunction2D.cc
irtkConvolutionWithPadding_1D.cc
irtkConvolutionWithPadding_2D.cc
irtkConvolutionWithPadding_3D.cc
irtkConvolution.cc
irtkConvolution_1D.cc
irtkConvolution_2D.cc
irtkConvolution_3D.cc
irtkDilation.cc
irtkErosion.cc
irtkFileANALYZEToImage.cc
irtkFileNIFTIToImage.cc
irtkFileGIPLToImage.cc
irtkFilePGMToImage.cc
irtkFileToImage.cc
irtkFileVTKToImage.cc
irtkGaussianBlurring.cc
irtkGaussianBlurring4D.cc
irtkGaussianBlurringWithPadding.cc
irtkGaussianInterpolateImageFunction.cc
irtkGaussianInterpolateImageFunction2D.cc
irtkGaussianNoise.cc
irtkGaussianNoiseWithPadding.cc
irtkGenericImage.cc
irtkGradientImage.cc
irtkGradientImageX.cc
irtkGradientImageY.cc
irtkGradientImageZ.cc
irtkHistogram_1D.cc
irtkHistogram_2D.cc
irtkDensity.cc
irtkImageFunction.cc
irtkImageToFile.cc
irtkImageToFileANALYZE.cc
irtkImageToFileGIPL.cc
irtkImageToFilePGM.cc
irtkImageToFilePNG.cc
irtkImageToFileVTK.cc
irtkImageToFileNIFTI.cc
irtkImageToImage.cc
irtkInterpolateImageFunction.cc
irtkLargestConnectedComponent.cc
irtkLargestConnectedComponentIterative.cc
irtkLinearInterpolateImageFunction.cc
irtkLinearInterpolateImageFunction2D.cc
irtkNearestNeighborInterpolateImageFunction.cc
irtkNearestNeighborInterpolateImageFunction2D.cc
irtkNoise.cc
irtkResampling.cc
irtkResamplingWithPadding.cc
irtkRicianNoise.cc
irtkRicianNoiseWithPadding.cc
irtkScalarFunctionToImage.cc
irtkSincInterpolateImageFunction.cc
irtkSincInterpolateImageFunction2D.cc
irtkUniformNoise.cc
irtkUniformNoiseWithPadding.cc
irtkAnisoDiffusion.cc
)

ADD_LIBRARY(image++ ${IMAGE_SRCS} ${IMAGE_INCLUDES})

INSTALL_FILES(/include FILES ${IMAGE_INCLUDES})
