dnl Process this file with autoconf to produce a configure script.
AC_INIT(../Makefile.in)

dnl Ckecks for aux programs
AC_CONFIG_AUX_DIR(`pwd`)

dnl Checks for programs.

AC_ARG_ENABLE(gcc, [-enable-gcc Enable gcc and g++], have_gcc=yes, have_gcc=no)

if test $have_gcc != no; then
	LDFLAGS="-Xlinker -s"
	CC=gcc
	CXX=g++
	CXXFLAGS="-Wall -fno-const-strings -ffloat-store -O2"
else
	CXX=CC
	CXXFLAGS=
	AC_PROG_CC
	AC_PROG_CXX
fi

AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_LANG_CPLUSPLUS

dnl Checks for libraries.
AC_CHECK_LIB(dl, dlopen, have_dl=yes, have_dl=no)
if test $have_dl != no; then
	DL_LIBS=-ldl
else
	DL_LIBS=
fi

dnl Checks for header files.
AC_PATH_XTRA
if test $x_includes; then
	X11_INCLUDES=-I$x_includes
	X11_LIBRARIES="-L$x_libraries $X_PRE_LIBS $X_EXTRA_LIBS -lX11"
else
	X11_LIBRARIES="-L$x_libraries $X_PRE_LIBS $X_EXTRA_LIBS -lX11"
fi

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl Checks for arch and os
AC_CANONICAL_HOST

dnl Checks for contrib package
AC_ARG_WITH(contrib,help,contrib=$with_contrib,contrib=no)
if test $contrib != no; then
	AC_DEFINE(HAS_CONTRIB)
	HAS_CONTRIB=1
	CONTRIB_INCLUDES="-I\$(PROJECT_PATH)/contrib++/include"
	CONTRIB_LIBRARIES="-lcontrib"
else
	HAS_CONTRIB=0
	CONTRIB_INCLUDES=
	CONTRIB_LIBRARIES=
fi

dnl Checks for cardiac package
AC_ARG_WITH(cardiac,help,cardiac=$with_cardiac,cardiac=no)
if test $cardiac != no; then
	AC_DEFINE(HAS_CARDIAC)
	HAS_CARDIAC=1
else
	HAS_CARDIAC=0
fi

dnl Checks for vtk package
AC_ARG_WITH(vtk,help,vtk=$with_vtk,vtk=no)
if test $vtk != no; then
	AC_DEFINE(HAS_VTK)
	HAS_VTK=1
	if test $vtk != yes; then
		VTK_INCLUDES="-I$vtk/include/vtk"
		VTK_LIBRARIES="-L$vtk/lib/vtk \$(VTK_LIB)"
	else
		VTK_INCLUDES=
		VTK_LIBRARIES="\$(VTK_LIB)"
	fi
else
	HAS_VTK=0
	VTK_INCLUDES=
	VTK_LIBRARIES=
fi

dnl Checks for OpenGL package
AC_ARG_WITH(gl,help,gl=$with_gl,gl=no)
if test $gl != no; then
	AC_DEFINE(HAS_GL)
	HAS_GL=1
	if test $gl != yes; then
		GL_INCLUDES="-I$gl/include"
		GL_LIBRARIES="-L$gl/lib \$(GL_LIB)"
	else
		GL_INCLUDES=
		GL_LIBRARIES="\$(GL_LIB)"
	fi
else
	HAS_GL=0
	GL_INCLUDES=
	GL_LIBRARIES=
fi

dnl Checks for GLUT package
AC_ARG_WITH(glut,help,glut=$with_glut,glut=no)
if test $glut != no; then
	AC_DEFINE(HAS_GLUT)
	HAS_GLUT=1
	if test $glut != yes; then
		GLUT_INCLUDES="-I$glut/include"
		GLUT_LIBRARIES="-L$glut/lib \$(GLUT_LIB)"
	else
		GLUT_INCLUDES=
		GLUT_LIBRARIES="\$(GLUT_LIB)"
	fi
else
	HAS_GLUT=0
	GLUT_INCLUDES=
	GLUT_LIBRARIES=
fi

dnl Checks for MESA package
AC_ARG_WITH(mesa,help,mesa=$with_mesa,mesa=no)
if test $mesa != no; then
	AC_DEFINE(HAS_MESA)
	HAS_MESA=1
else
	HAS_MESA=0
fi

dnl Checks for FLTK package
AC_ARG_WITH(fltk,help,fltk=$with_fltk,fltk=no)
if test $fltk != no; then
	AC_DEFINE(HAS_FLTK)
	HAS_FLTK=1
	if test $fltk != yes; then
		FLTK_INCLUDES="-I$fltk/include"
		FLTK_LIBRARIES="-L$fltk/lib \$(FLTK_LIB)"
	else
		FLTK_INCLUDES=
		FLTK_LIBRARIES="\$(FLTK_LIB)"
	fi
else
	HAS_FLTK=0
	FLTK_INCLUDES=
	FLTK_LIBRARIES=
fi

dnl Check for perl
PERL=perl

dnl Check for doxygen
DOXYGEN=doxygen

dnl Check for byte swapping
AC_C_BIGENDIAN

dnl Find where the project is
PROJECT=`cd ..;pwd`

dnl Set output variables
AC_SUBST(LDFLAGS)
AC_SUBST(CXX)
AC_SUBST(CXXFLAGS)
AC_SUBST(HAS_CARDIAC)
AC_SUBST(HAS_CONTRIB)
AC_SUBST(CONTRIB_INCLUDES)
AC_SUBST(CONTRIB_LIBRARIES)
AC_SUBST(HAS_TCL)
AC_SUBST(TCL_INCLUDES)
AC_SUBST(TCL_LIBRARIES)
AC_SUBST(HAS_TIX)
AC_SUBST(TIX_INCLUDES)
AC_SUBST(TIX_LIBRARIES)
AC_SUBST(HAS_VTK)
AC_SUBST(VTK_INCLUDES)
AC_SUBST(VTK_LIBRARIES)
AC_SUBST(HAS_GL)
AC_SUBST(GL_INCLUDES)
AC_SUBST(GL_LIBRARIES)
AC_SUBST(HAS_GLUT)
AC_SUBST(GLUT_INCLUDES)
AC_SUBST(GLUT_LIBRARIES)
AC_SUBST(HAS_MESA)
AC_SUBST(HAS_FLTK)
AC_SUBST(FLTK_INCLUDES)
AC_SUBST(FLTK_LIBRARIES)
AC_SUBST(X11_INCLUDES)
AC_SUBST(X11_LIBRARIES)
AC_SUBST(PERL)
AC_SUBST(DOXYGEN)

dnl Some more stuff
IRTK_SOURCE_DIR=$PROJECT
AC_SUBST(IRTK_SOURCE_DIR)
IRTK_BINARY_DIR=$PROJECT
AC_SUBST(IRTK_BINARY_DIR)
AC_SUBST(PROJECT)
INSTALL_LIB=$PROJECT/lib/$host_cpu-$host_vendor-$host_os
AC_SUBST(INSTALL_LIB)
INSTALL_BIN=$PROJECT/bin/$host_cpu-$host_vendor-$host_os
AC_SUBST(INSTALL_BIN)
INSTALL_DOC=$PROJECT/lib/doc
AC_SUBST(INSTALL_DOC)
AC_SUBST(DL_LIBS)

dnl Set output 
 
AC_OUTPUT(../project.tmpl:project.tmpl ../Makefile ../applications/Makefile
../common++/Makefile ../common++/src/Makefile ../contrib++/Makefile
../contrib++/src/Makefile ../geometry++/Makefile ../geometry++/src/Makefile
../image++/Makefile ../image++/src/Makefile ../packages/Makefile
../packages/applications/Makefile ../packages/registration/Makefile
../packages/registration/src/Makefile ../packages/rview/Makefile
../packages/rview/fltk/Makefile ../packages/rview/glut/Makefile
../packages/rview/src/Makefile ../packages/transformation/Makefile
../packages/transformation/src/Makefile ../recipes/Makefile
../recipes/src/Makefile ../documentation/Makefile ../documentation/doxyfile
../documentation/doc_makeall.sh, chmod +x ../documentation/doc_makeall.sh)






